8199432: metaspace: fix wrong comment and condition in SpaceManager::verify()

Reviewed-by: coleenp